register unit tests

--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -80,6 +80,16 @@
         android:textAllCaps="false"
         android:textColor="@color/design_default_color_primary" />
 
+    <ProgressBar
+        android:id="@+id/progressBarLogIn"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:visibility="gone"
+        />
 
 
 </RelativeLayout>
