--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -305,8 +305,13 @@
             android:textAllCaps="false"
             android:textColor="@color/design_default_color_primary" />
 
-
-
+        <ProgressBar
+            android:id="@+id/progressBarRegisterFrag"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            />
 
 
     </LinearLayout>
