--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".authentication.presentation.login.LogInFragment">
+    tools:context="com.example.farmersecom.features.authentication.presentation.login.LogInFragment">
 
 
     <com.google.android.material.textfield.TextInputLayout
