--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".authentication.presentation.register.RegisterFragment">
+    tools:context="com.example.farmersecom.features.authentication.presentation.register.RegisterFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
