--- a/app/src/main/res/navigation/base_nav.xml
+++ b/app/src/main/res/navigation/base_nav.xml
@@ -7,18 +7,32 @@
 
     <fragment
         android:id="@+id/logInFragment"
-        android:name="com.example.farmersecom.authentication.presentation.login.LogInFragment"
+        android:name="com.example.farmersecom.features.authentication.presentation.login.LogInFragment"
         android:label="Log In"
         tools:layout="@layout/fragment_log_in" >
         <action
             android:id="@+id/action_logInFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
+        <action
+            android:id="@+id/action_logInFragment_to_profileFragment"
+            app:destination="@id/profileFragment"
+    />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
-        android:name="com.example.farmersecom.authentication.presentation.register.RegisterFragment"
+        android:name="com.example.farmersecom.features.authentication.presentation.register.RegisterFragment"
         android:label="fragment_register"
         tools:layout="@layout/fragment_register" />
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.example.farmersecom.features.profile.presentation.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_profileFragment_to_logInFragment"
+            app:destination="@id/logInFragment"
+         />
+    </fragment>
 
 
 </navigation>
