--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -20,7 +20,9 @@
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="@string/email" />
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -42,6 +44,7 @@
             android:layout_height="wrap_content"
             android:textColorHint="#757575"
             android:hint="@string/password"
+            android:inputType="textPassword"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
