--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".features.profile.presentation.ProfileFragment">
+    tools:context=".features.profile.presentation.profile.ProfileFragment">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/imageCardView"
@@ -12,39 +12,40 @@
         android:layout_height="120dp"
         app:cardCornerRadius="60dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="20dp">
         <ImageView
+            android:id="@+id/imageViewProfile"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scaleType="centerCrop"
             android:background="@color/colorPrimaryDark" />
     </com.google.android.material.card.MaterialCardView>
 
     <Button
+        android:id="@+id/buttonChangePhoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="change Photo"
-        android:background="@color/colorTransparent"
-        android:textColor="@color/colorPrimaryDark"
-        android:textAllCaps="false"
-        android:layout_toEndOf="@id/imageCardView"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="2dp"
         android:layout_marginTop="72dp"
-        />
+        android:layout_marginEnd="2dp"
+        android:layout_toEndOf="@id/imageCardView"
+        android:background="@color/colorTransparent"
+        android:text="change Photo"
+        android:textAllCaps="false"
+        android:textColor="@color/colorPrimaryDark" />
 
     <TextView
         android:id="@+id/textViewProfileFragName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/imageCardView"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:text="@string/name"
         android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_centerHorizontal="true"
-        />
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/buttonUpdateInfo"
@@ -71,12 +72,13 @@
 
     <Button
         android:id="@+id/buttonBuyersSection"
-        android:layout_width="100dp"
+        android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_below="@id/textBuyersSection"
         android:layout_marginStart="24sp"
         android:layout_marginTop="8dp"
-        android:text="Buyers Section" />
+        android:text="Buyers Section"
+        android:textSize="10sp" />
 
 
     <TextView
@@ -96,20 +98,20 @@
         android:layout_below="@id/textSellersSection"
         android:layout_marginStart="24sp"
         android:layout_marginTop="8dp"
-        android:text="Setup Store" />
+        android:text="Setup Store"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/buttonGoToStore"
         android:layout_width="100dp"
         android:layout_height="80dp"
-        android:text="Go to Store"
         android:layout_below="@id/buttonSetupStore"
-        android:layout_marginTop="8dp"
         android:layout_marginStart="24sp"
-        android:visibility="gone"
-        />
+        android:layout_marginTop="8dp"
+        android:text="Go to Store"
+        android:visibility="gone" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonProfileFragLogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -117,6 +119,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="40dp"
         android:background="@drawable/button_bg"
-        android:text="Log out" />
+        android:text="Log out"
+        android:textColor="@color/white" />
 
 </RelativeLayout>
