--- a/app/src/main/res/layout/fragment_add_new_product.xml
+++ b/app/src/main/res/layout/fragment_add_new_product.xml
@@ -22,6 +22,7 @@
         android:layout_marginBottom="16dp"
         >
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextAddNewProductName"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="text"
@@ -38,6 +39,7 @@
             android:layout_marginBottom="16dp"
             >
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editTextAddNewProductDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="false"
@@ -50,11 +52,12 @@
 
 
         <com.google.android.material.button.MaterialButtonToggleGroup
-            android:id="@+id/productQuantityUnitGroup"
+            android:id="@+id/buttonProductQuantityUnitGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:singleSelection="true"
             app:selectionRequired="true"
+            app:checkedButton="@id/buttonProductQuantityUnitKilo"
             android:gravity="center"
             >
             <Button
@@ -62,7 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                android:text="Kilo"
+                android:text="@string/kilo"
                 android:textAllCaps="false"
                 android:textColor="@color/colorPrimary"
                 />
@@ -72,7 +75,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                android:text="Liter"
+                android:text="@string/liter"
+                android:textAllCaps="false"
+                android:textColor="@color/colorPrimary"
+                />
+            <Button
+                android:id="@+id/buttonProductQuantityUnitDozen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:text="@string/dozen"
                 android:textAllCaps="false"
                 android:textColor="@color/colorPrimary"
                 />
@@ -90,7 +102,7 @@
             android:layout_marginEnd="32dp"
             >
             <AutoCompleteTextView
-                android:id="@+id/autoCompleteProductQuantity"
+                android:id="@+id/autoCompleteAddNewProductProductQuantity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="8dp"
@@ -110,6 +122,7 @@
             android:layout_marginBottom="16dp"
             >
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editTextAddNewProductPriceInRupees"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
@@ -125,8 +138,9 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="32dp"
             >
+
             <ImageView
-                android:id="@+id/productImage1"
+                android:id="@+id/imageViewAddNewProductFirstImage"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_weight="1"
@@ -134,7 +148,8 @@
                 />
 
             <ImageView
-                android:id="@+id/productImage2"
+
+                android:id="@+id/imageViewAddNewProductSecondImage"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_weight="1"
@@ -143,7 +158,7 @@
 
 
             <ImageView
-                android:id="@+id/productImage3"
+                android:id="@+id/imageViewAddNewProductThirdImage"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_weight="1"
