--- a/app/src/main/res/navigation/base_nav.xml
+++ b/app/src/main/res/navigation/base_nav.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/base_nav"
-    app:startDestination="@id/logInFragment">
+    app:startDestination="@id/homeFragment">
 
     <fragment
         android:id="@+id/logInFragment"
@@ -30,7 +30,7 @@
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.example.farmersecom.features.profile.presentation.profile.ProfileFragment"
-        android:label="fragment_profile"
+        android:label="profile"
         tools:layout="@layout/fragment_profile" >
         <action
             android:id="@+id/action_profileFragment_to_logInFragment"
@@ -42,6 +42,9 @@
         <action
             android:id="@+id/action_profileFragment_to_storeFragment"
             app:destination="@id/storeFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
     <fragment
         android:id="@+id/setupStoreFragment"
@@ -69,6 +72,23 @@
         android:name="com.example.farmersecom.features.store.presentation.addNewProduct.AddNewProductFragment"
         android:label="fragment_add_new_product"
         tools:layout="@layout/fragment_add_new_product" />
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.farmersecom.features.home.presentation.HomeFragment"
+        android:label="Home"
+        tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/cartFragment"
+        android:name="com.example.farmersecom.features.cart.presentation.CartFragment"
+        android:label="Cart"
+        tools:layout="@layout/fragment_cart" />
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.example.farmersecom.features.search.presentation.SearchFragment"
+        android:label="Search"
+        tools:layout="@layout/fragment_search"
+
+        />
 
 
 </navigation>
