search design done

--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -32,33 +32,64 @@
                 android:layout_marginStart="8dp"
                 />
 
-            <TextView
-                android:id="@+id/textViewFragmentProductDetailsProductDescription"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="product description"
-                android:textSize="18sp"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_below="@id/textViewFragmentProductDetailsProductPrice"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="8dp"
-                />
 
             <RatingBar
                 android:id="@+id/ratingBarFragmentProductDetails"
+                style="?android:attr/ratingBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="?android:attr/ratingBarStyleSmall"
-                android:numStars="5"
-                android:stepSize="0.1"
-                android:isIndicator="true"
-                android:layout_below="@id/textViewFragmentProductDetailsProductDescription"
-                android:layout_marginTop="16dp"
-                android:layout_marginStart="16dp"
+                android:layout_below="@id/textViewFragmentProductDetailsProductPrice"
                 android:layout_alignParentStart="true"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:isIndicator="true"
+                android:numStars="5"
+                android:stepSize="0.1" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/quantityLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/quantity"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="32dp"
+                android:layout_below="@id/ratingBarFragmentProductDetails"
+                >
+                <AutoCompleteTextView
+                    android:id="@+id/autoCompleteProductDetailsQuantity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp"
+                    android:inputType="text"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Unit"
+                android:layout_toEndOf="@id/quantityLayout"
+                android:layout_below="@id/ratingBarFragmentProductDetails"
+                android:layout_marginTop="24dp"
+                android:textSize="24sp"
                 />
+
+            <TextView
+                android:id="@+id/textViewProductDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Product Description"
+                android:layout_below="@id/quantityLayout"
+                android:layout_marginTop="16dp"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="16dp"
+                android:textSize="18sp"
+                android:layout_alignParentEnd="true"
+                />
+
         </RelativeLayout>
 
 
