--- a/app/src/main/res/layout/fragment_add_new_product.xml
+++ b/app/src/main/res/layout/fragment_add_new_product.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".features.store.presentation.addNewProduct.AddNewProductFragment">
+    tools:context=".features.storeAdmin.presentation.addNewProduct.AddNewProductFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -96,6 +96,27 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="@string/select_category"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="32dp"
+            >
+            <AutoCompleteTextView
+                android:id="@+id/autoCompleteAddNewProductProductCategory"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:inputType="text"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="@string/select_quantity"
             android:layout_marginStart="32dp"
             android:layout_marginTop="8dp"
@@ -110,6 +131,7 @@
                 android:inputType="text"
                 />
         </com.google.android.material.textfield.TextInputLayout>
+
 
 
         <com.google.android.material.textfield.TextInputLayout
