--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,16 +7,26 @@
     tools:context=".features.search.presentation.SearchFragment">
 
 
+    <ImageView
+        android:id="@+id/fragmentSearchFiltersImageView"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/ic_baseline_filter_24"
+        android:layout_marginBottom="16dp"
+        />
+
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         app:cardUseCompatPadding="true"
-        android:layout_alignParentTop="true"
         android:layout_marginEnd="48dp"
         android:layout_marginTop="4dp"
         android:layout_marginStart="16dp"
         android:elevation="10dp"
+        android:layout_below="@id/fragmentSearchFiltersImageView"
         >
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/editTextSearchFragmentSearch"
