--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".features.productDetails.presentation.ProductDetailsFragment">
+    tools:context=".features.productDetails.presentation.productDetails.ProductDetailsFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -21,16 +21,28 @@
                 android:layout_height="300dp" />
 
             <TextView
+                android:id="@+id/textViewFragmentProductDetailsProductName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/recyclerViewFragmentProductDetails"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="8dp"
+                android:text="Name"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+
+            <TextView
                 android:id="@+id/textViewFragmentProductDetailsProductPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="RS.375"
-                android:layout_below="@id/recyclerViewFragmentProductDetails"
-                android:textSize="24sp"
-                android:textStyle="bold"
+                android:layout_below="@id/textViewFragmentProductDetailsProductName"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="8dp"
-                />
+                android:text="RS.375"
+                android:textSize="20sp"
+                android:textColor="@color/colorRed"
+                android:textStyle="bold" />
 
 
             <RatingBar
@@ -46,43 +58,33 @@
                 android:numStars="5"
                 android:stepSize="0.1" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/quantityLayout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                android:layout_width="160dp"
-                android:layout_height="wrap_content"
-                android:hint="@string/quantity"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="32dp"
-                android:layout_below="@id/ratingBarFragmentProductDetails"
-                >
-                <AutoCompleteTextView
-                    android:id="@+id/autoCompleteProductDetailsQuantity"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="8dp"
-                    android:paddingEnd="8dp"
-                    android:inputType="text"
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
-
             <TextView
+                android:id="@+id/textViewProductQuantityFragmentProductDetails"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Unit"
-                android:layout_toEndOf="@id/quantityLayout"
                 android:layout_below="@id/ratingBarFragmentProductDetails"
                 android:layout_marginTop="24dp"
-                android:textSize="24sp"
-                />
+                android:text="Quantity"
+                android:textSize="24sp" />
+
+
+            <TextView
+                android:id="@+id/textViewProductQuantityUnitFragmentProductDetails"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/ratingBarFragmentProductDetails"
+                android:layout_marginTop="24dp"
+                android:layout_toEndOf="@id/textViewProductQuantityFragmentProductDetails"
+                android:layout_marginStart="16dp"
+                android:text="Unit"
+                android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/textViewProductDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Product Description"
-                android:layout_below="@id/quantityLayout"
+                android:layout_below="@id/textViewProductQuantityFragmentProductDetails"
                 android:layout_marginTop="16dp"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="16dp"
@@ -111,11 +113,10 @@
         android:id="@+id/buttonProductDetailsFragmentBuyNow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/buy_now"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="32dp"
-        />
+        android:text="@string/buy_now" />
 
 
 </RelativeLayout>
