--- a/app/src/main/res/layout/fragment_product_store.xml
+++ b/app/src/main/res/layout/fragment_product_store.xml
@@ -73,8 +73,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/fragmentProductStoreSellerInfoLayout"
-        android:layout_marginTop="8dp"
-        />
+        android:layout_marginTop="8dp" />
 
 
 </RelativeLayout>
