--- a/app/src/main/res/layout/layout_home_slider_item.xml
+++ b/app/src/main/res/layout/layout_home_slider_item.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="200dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_gravity="center_horizontal"
-    app:cardCornerRadius="16dp"
     app:cardUseCompatPadding="true"
-    app:cardMaxElevation="2dp"
+    app:cardCornerRadius="16dp"
     >
-
-    <ImageView
-        android:id="@+id/imageViewBannerImg"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/undraw_3"
-        android:scaleType="fitXY"
+        >
+        <ImageView
+            android:id="@+id/layoutHomeSliderImageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary"
+            android:scaleType="fitXY"
+            />
+    </RelativeLayout>
 
-        />
+
+
 
 </com.google.android.material.card.MaterialCardView>
